Fixed chart alignment issue on Firefox

--- a/src/App.module.css
+++ b/src/App.module.css
@@ -39,4 +39,7 @@
 .smallChartsContainer {
   display: flex;
   gap: 1.775rem;
+  @-moz-document url-prefix() {
+    gap: 2.75rem;
+  }
 }
